# fairmofapp

./: .gitattributes  .gitignore  home.py  pyproject.toml
data/: A.json
data/index_dir/: _MAIN_1.toc
docs/source/: conf.py  index.rst
fairmofapp/analyzer/: adj_matrix_loader.py  similarity_graph.py
fairmofapp/loader/: json_finder.py  visualizer.py
pages/: about.py  diffraction_pattern.py  find_similar.py  mofstructure.py  pxrd.py  search_mofs.py
