[tool.poetry]
name = "fairmofapp"
version = "0.1.0"
description = ""
authors = ["bafgreat <75862753+bafgreat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
networkx = "^3.3"
streamlit = "^1.38.0"
plotly = "^5.24.0"
mofstructure = "^0.1.8.1"
py3dmol = "^2.4.0"
stmol = "^0.0.9"
ipython = "^8.27.0"
ipython-genutils = "^0.2.0"
elasticsearch = "^8.15.1"
# whoosh = "^2.7.4"
streamlit-aggrid = "^1.0.5"
watchdog = "2.1.5"
whoosh-update = "^0.1.0"


[tool.poetry.group.dev.dependencies]
# sphinx = ">=8.0.2"
# sphinxcontrib-mermaid = "^0.9.2"
# sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
